// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Add" commands add-electron --use-parcel 1`] = `
"{
    \\"name\\": \\"tomo-native-app\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"Native Desktop application built with Electron\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"main\\": \\"index.js\\",
    \\"scripts\\": {
        \\"build:electron\\": \\"npm-run-all build:es build:css\\",
        \\"prestart:electron\\": \\"npm run build:electron\\",
        \\"start:electron\\": \\"electron index --enable-logging\\",
        \\"dev\\": \\"npm-run-all --parallel watch:es start:electron\\"
    }
}
"
`;

exports[`"Add" commands add-electron 1`] = `
"{
    \\"name\\": \\"tomo-native-app\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"Native Desktop application built with Electron\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"main\\": \\"index.js\\",
    \\"scripts\\": {
        \\"build:electron\\": \\"npm-run-all build:es build:css\\",
        \\"prestart:electron\\": \\"npm run build:electron\\",
        \\"start:electron\\": \\"electron index --enable-logging\\",
        \\"dev\\": \\"npm-run-all --parallel watch:es watch:css start:electron\\"
    }
}
"
`;

exports[`"Add" commands add-electron 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: bin,
            children: [
                {
                    name: preload.js,
                    size: 314,
                    type: file
                }
            ],
            size: 314,
            type: directory
        },
        {
            name: index.js,
            size: 2194,
            type: file
        },
        {
            name: package.json,
            size: 467,
            type: file
        }
    ],
    size: 2975,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: esdoc.conf.json,
            size: 417,
            type: file
        }
    ],
    size: 417,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc (with React) 2`] = `
"{
    \\"source\\": \\"./src\\",
    \\"destination\\": \\"./docs\\",
    \\"plugins\\": [
        {
            \\"name\\": \\"esdoc-standard-plugin\\"
        },
        {
            \\"name\\": \\"esdoc-ecmascript-proposal-plugin\\",
            \\"option\\": {
                \\"all\\": true
            }
        },
        {
            \\"name\\": \\"esdoc-jsx-plugin\\",
            \\"options\\": {
                \\"enable\\": true
            }
        }
    ]
}
"
`;

exports[`"Add" commands add-esdoc 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-esdoc 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: esdoc.conf.json,
            size: 286,
            type: file
        },
        {
            name: package.json,
            size: 419,
            type: file
        }
    ],
    size: 705,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint:docs\\": \\"eslint . --no-eslintrc --rule valid-jsdoc:error --parser babel-eslint\\",
        \\"predocs\\": \\"npm run lint:docs\\",
        \\"docs\\": \\"esdoc -c esdoc.conf.json\\",
        \\"postdocs\\": \\"open-cli ./docs/index.html\\"
    }
}
"
`;

exports[`"Add" commands add-esdoc 4`] = `
"{
    \\"source\\": \\"./src\\",
    \\"destination\\": \\"./docs\\",
    \\"plugins\\": [
        {
            \\"name\\": \\"esdoc-standard-plugin\\"
        },
        {
            \\"name\\": \\"esdoc-ecmascript-proposal-plugin\\",
            \\"option\\": {
                \\"all\\": true
            }
        }
    ]
}
"
`;

exports[`"Add" commands add-eslint (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 432,
            type: file
        }
    ],
    size: 468,
    type: directory
}
"
`;

exports[`"Add" commands add-eslint (with React) 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    plugins: [
        'jsx-a11y'
    ],
    settings: {
        react: {
            version: '16.2'
        }
    }
};"
`;

exports[`"Add" commands add-eslint 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 154,
            type: file
        }
    ],
    size: 190,
    type: directory
}
"
`;

exports[`"Add" commands add-eslint 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint'
};"
`;

exports[`"Add" commands add-jest --browser 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-jest --browser 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 168,
            type: file
        }
    ],
    size: 168,
    type: directory
}
"
`;

exports[`"Add" commands add-jest --browser 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"setupFilesAfterEnv\\": [
            \\"<rootDir>/__tests__/setup.js\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"scripts\\": {
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\"
    }
}
"
`;

exports[`"Add" commands add-jest --browser 4`] = `
"{
    name: tomo-test,
    children: [
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 337,
                    type: file
                },
                {
                    name: setup.js,
                    size: 370,
                    type: file
                }
            ],
            size: 707,
            type: directory
        },
        {
            name: package.json,
            size: 602,
            type: file
        }
    ],
    size: 1309,
    type: directory
}
"
`;

exports[`"Add" commands add-jest 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-jest 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 168,
            type: file
        }
    ],
    size: 168,
    type: directory
}
"
`;

exports[`"Add" commands add-jest 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"scripts\\": {
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\"
    }
}
"
`;

exports[`"Add" commands add-jest 4`] = `
"{
    name: tomo-test,
    children: [
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 337,
                    type: file
                }
            ],
            size: 337,
            type: directory
        },
        {
            name: package.json,
            size: 516,
            type: file
        }
    ],
    size: 853,
    type: directory
}
"
`;

exports[`"Add" commands add-marionette 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: fonts.css,
                            size: 558,
                            type: file
                        },
                        {
                            name: style.css,
                            size: 1094,
                            type: file
                        }
                    ],
                    size: 1652,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: SansForgetica-Regular.eot,
                            size: 53094,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.svg,
                            size: 167134,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.ttf,
                            size: 52788,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff,
                            size: 25732,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff2,
                            size: 18112,
                            type: file
                        }
                    ],
                    size: 316860,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: blank_canvas.png,
                            size: 88698,
                            type: file
                        },
                        {
                            name: preferences.png,
                            size: 81379,
                            type: file
                        }
                    ],
                    size: 170077,
                    type: directory
                },
                {
                    name: index.html,
                    size: 1268,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 489857,
            type: directory
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js,
                            size: 1516,
                            type: file
                        },
                        {
                            name: body.js,
                            size: 186,
                            type: file
                        },
                        {
                            name: footer.js,
                            size: 657,
                            type: file
                        },
                        {
                            name: header.js,
                            size: 117,
                            type: file
                        }
                    ],
                    size: 2476,
                    type: directory
                },
                {
                    name: main.js,
                    size: 199,
                    type: file
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js,
                            size: 3980,
                            type: file
                        },
                        {
                            name: mn.redux.state.js,
                            size: 2016,
                            type: file
                        }
                    ],
                    size: 5996,
                    type: directory
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js,
                            size: 851,
                            type: file
                        }
                    ],
                    size: 851,
                    type: directory
                }
            ],
            size: 9522,
            type: directory
        }
    ],
    size: 499379,
    type: directory
}
"
`;

exports[`Add Reason with Webpack 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:reason\\": \\"bsb -make-world -clean-world\\",
        \\"watch:reason\\": \\"npm run build:reason -- -w\\"
    }
}
"
`;

exports[`Add Reason with Webpack 2`] = `
"{
    \\"bs-dependencies\\": [
        \\"reason-react\\"
    ],
    \\"bsc-flags\\": [
        \\"-bs-super-errors\\"
    ],
    \\"namespace\\": true,
    \\"package-specs\\": [
        {
            \\"module\\": \\"es6\\",
            \\"in-source\\": true
        }
    ],
    \\"ppx-flags\\": [],
    \\"reason\\": {
        \\"react-jsx\\": 3
    },
    \\"refmt\\": 3,
    \\"sources\\": [
        {
            \\"dir\\": \\"src\\",
            \\"subdirs\\": true
        }
    ],
    \\"suffix\\": \\".bs.js\\",
    \\"name\\": \\"my-project\\"
}
"
`;

exports[`Add Reason with Webpack 3`] = `
"{
    name: tomo-test,
    children: [
        {
            name: bsconfig.json,
            size: 474,
            type: file
        },
        {
            name: package.json,
            size: 301,
            type: file
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: App.re,
                            size: 116,
                            type: file
                        },
                        {
                            name: Example.re,
                            size: 126,
                            type: file
                        }
                    ],
                    size: 242,
                    type: directory
                }
            ],
            size: 242,
            type: directory
        }
    ],
    size: 1017,
    type: directory
}
"
`;
